cleanup project, trying to make bird rotation